<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding10"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_artis"
            android:contentDescription="@string/penjual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:layout_margin="@dimen/padding10" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjual_produk"
                android:layout_marginBottom="@dimen/padding5"
                android:textSize="@dimen/text12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjual_penilaian"
                android:layout_marginBottom="@dimen/padding5"
                android:textSize="@dimen/text12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjual_bergabung"
                android:layout_marginBottom="@dimen/padding5"
                android:textSize="@dimen/text12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjual_terakhir_online"
                android:layout_marginBottom="@dimen/padding5"
                android:textSize="@dimen/text12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjual_chat_dibalas"
                android:layout_marginBottom="@dimen/padding5"
                android:textSize="@dimen/text12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjual_pengikut"
                android:layout_marginBottom="@dimen/padding5"
                android:textSize="@dimen/text12" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pelapak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding5"
        android:gravity="end"
        android:visibility="gone"
        android:orientation="horizontal">

        <!--<ImageView
            android:id="@+id/btn_chat"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"
            android:background="@drawable/chat"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_marginEnd="@dimen/padding20"
            android:textColor="#fff" />-->

        <Button
            android:id="@+id/btn_chat"
            android:layout_width="@dimen/detail_barang_button_width"
            android:layout_height="@dimen/detail_barang_button_height"
            android:background="@drawable/style_fullrounded_gray_rectangle"
            android:text="@string/penjual_chat"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:layout_margin="@dimen/padding5"
            android:textSize="@dimen/text10" />

        <Button
            android:id="@+id/btn_follow"
            android:layout_width="@dimen/detail_barang_button_width"
            android:layout_height="@dimen/detail_barang_button_height"
            android:background="@drawable/style_fullrounded_gold_rectangle"
            android:text="@string/penjual_follow"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:layout_margin="@dimen/padding5"
            android:textSize="@dimen/text10" />
    </LinearLayout>
</LinearLayout>