<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/layout_lelang"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/lelang_item_width"
    android:layout_height="@dimen/lelang_item_height"
    android:layout_margin="@dimen/padding10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding5">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_lelang"
            android:contentDescription="@string/barang"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding10"
            android:paddingBottom="@dimen/padding10">

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding5"
                android:paddingEnd="@dimen/padding5"
                android:textColor="#000"
                android:textSize="@dimen/text12"
                android:textStyle="bold"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/txt_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="#000"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding5"
                android:paddingEnd="@dimen/padding5"
                android:textSize="@dimen/text8"
                android:ellipsize="end"/>
        </LinearLayout>

        <include layout="@layout/view_divider"
            android:layout_height="@dimen/padding2"
            android:layout_width="match_parent"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding5"
            android:columnCount="4"
            android:rowCount="2">

            <TextView
                android:id="@+id/txt_hari"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/waktu_nol"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="@dimen/text14"/>

            <TextView
                android:id="@+id/txt_jam"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/waktu_nol"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="@dimen/text14"/>

            <TextView
                android:id="@+id/txt_menit"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/waktu_nol"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="@dimen/text14"/>

            <TextView
                android:id="@+id/txt_detik"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/waktu_nol"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="@dimen/text14"/>

            <TextView
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/hari"
                android:textColor="#000"
                android:textSize="@dimen/text10"/>

            <TextView
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/jam"
                android:textColor="#000"
                android:textSize="@dimen/text10"/>

            <TextView
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/menit"
                android:textColor="#000"
                android:textSize="@dimen/text10"/>

            <TextView
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:text="@string/detik"
                android:textColor="#000"
                android:textSize="@dimen/text10"/>
        </GridLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>