<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_barang"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/padding5"
    android:layout_marginEnd="@dimen/padding5"
    android:layout_marginTop="@dimen/padding5"
    android:layout_marginBottom="@dimen/padding20">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/barang_item_height_small"
        app:cardCornerRadius="@dimen/padding10">

        <ImageView
            android:id="@+id/img_barang"
            android:contentDescription="@string/barang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/artis2"
            android:scaleType="centerCrop"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:minLines="2"
        android:ellipsize="end"
        android:padding="@dimen/padding2"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/gold"
        android:textSize="@dimen/text14" />

    <TextView
        android:id="@+id/txt_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="@dimen/text12"
        android:padding="@dimen/padding2"/>

    <Button
        android:id="@+id/btn_pesan"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/padding10"
        android:layout_marginEnd="@dimen/padding10"
        android:layout_height="@dimen/item_barang_button_height"
        android:layout_marginTop="@dimen/padding5"
        android:text="@string/barang_pesan_sekarang"
        android:background="@drawable/style_fullrounded_gold_rectangle"
        android:textColor="@color/white"
        android:textSize="@dimen/text10"
        android:textAllCaps="false"
        android:layout_gravity="center"/>
</LinearLayout>